static/css/style.css
/* Global settings  */

h3 {
	margin-bottom: 40px;
	text-align: center;
}

.nodisplay {
	display: none;
}

form {
    margin-top: 50px;
}

/* index page  */

h5 {
	margin-left: 40px;
	margin-top: 20px;
	margin-bottom: 30px;
}

p {
	display: flex;
	justify-content: space-between;
}

.img-spacing {
	width: 205px;
}

.row-margin {
	margin-left: 50px;
	margin-right: 50px;
	/* border: 1px solid; */
}

.upcoming-header {
	display: flex;
	margin-top: 40px;
}

.admin-edit {
	margin-top: 10px;
	margin-left: 20px;
}

strong {
	font-weight: bold;
}

.modal-header {
	display: flex;
	justify-content: space-between;
}

/* star rating  */
.star-container{
	display: flex;
	align-items: center;
	justify-content: center;
	height: 100%;
}

.rating-wrap{
	max-width: 600px;
	margin: auto;
	padding: 15px;
	text-align: center;
}

.star-cont {
    display: flex;
	align-items: center;
	justify-content: center;
    gap: 25px;
}
#rating-value{	
	width: 120px;
	margin: 20px auto 0;
	text-align: center;
    font-size: 20px;
}

/*styling star rating*/
.rating{
	border: none;
	float: left;
}

.rating > input{
	display: none;
}

.rating > label:before{
	content: '\f005';
	font-family: FontAwesome;
	margin: 5px;
	font-size: 1.5rem;
	display: inline-block;
	cursor: pointer;
}

.rating > label{
	color: #ddd;
	float: right;
	cursor: pointer;
}

.rating > input:checked ~ label,
.rating:not(:checked) > label:hover, 
.rating:not(:checked) > label:hover ~ label{
	color: #2ce679;
}

.rating > input:checked + label:hover,
.rating > input:checked ~ label:hover,
.rating > label:hover ~ input:checked ~ label,
.rating > input:checked ~ label:hover ~ label{
	color: #2ddc76;
}

h2 {
    text-align: center;
}

/* My list  */

.menu-container {
	display: flex;
	justify-content: center;
}

#status-menu-container {
    margin-top: 30px;
    margin-bottom: 50px;
    background-color: aqua;
    height: 60px;
    display: flex;
    align-items: center;
	width: 90%;
	height: 100%;
	line-height: 0%;
}

#status-menu-container ul {
	display: flex;
	flex-wrap: wrap;
	padding-top: 10px;
	padding-bottom: 10px;

}
#status-menu {
    display: flex;
    justify-content: center;
    gap: 50px;
    width: 100%;
    font-size: 20px;
}

.show-table {
	width: 90%;
	margin: auto;
}


.thumb-container { 
    width: 80px; 
    height: 80px; 
    overflow: hidden; 
    border-radius: 8px; 
}

.thumbnail { 
    width: 100%; 
    height: 100%; 
    object-fit: cover; 
    border-radius: 5px; 
} 

.thumb-box {
    width: 90px;
}

/* sign in  */
.form-btn {
    width: 180px;
}

/* Profile  */

h6 {
	text-align: center;
	font-weight: bold;
	margin-bottom: 40px;
}

.profile-header {
	display: flex;
	width: 100%;
	justify-content: center;
	align-items: center;
	gap: 25px;
}

.images {
	max-width: 200px;
	max-height: 285px;
}

.carousel-item {
	margin-top: -70px;
}

